Wed Oct 27 07:22:25 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/Log/BasicLogFactory_i.cpp:
	* orbsvcs/orbsvcs/Log/EventLogFactory_i.cpp:
	* orbsvcs/orbsvcs/Log/LogMgr_i.cpp:
	* orbsvcs/orbsvcs/Log/LogMgr_i.h:
	* orbsvcs/orbsvcs/Log/NotifyLogFactory_i.cpp:
	* orbsvcs/orbsvcs/Log/RTEventLogFactory_i.cpp:

	  Changed create() method to find a unused/unique id instead of
	  simply using the last id allocated.  That could result in an
	  LogIdAlreadyExists exception being thrown if the id had been
	  taken for another log via create_with_id().

Wed Oct 27 09:08:15 2004  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/HTIOP.idl:

          Removed a misleading comment.  It caused warnings with the Borland
          compiler anyway.

Wed Oct 27 09:03:24 2004  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/HTIOP/HTIOP_Acceptor_Impl.cpp:

          Make this code compilable.  So far, I've only seen aCC attempt to
          build it.

Wed Oct 27 08:00:33 2004  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/HTIOP/HTIOP_Acceptor.h:
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Acceptor_Impl.h:
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Completion_Handler.h:
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Connection_Handler.h:
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Connector.h:
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Connector_Impl.h:
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Endpoint.h:
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Factory.h:
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Profile.h:
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Transport.h:

          Semi-colons are not required on the closing brace of a namespace
          and cause errors on a few compilers.

Wed Oct 27 07:15:25 2004  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/tests/HTIOP/AMI/client.cpp:
        * orbsvcs/tests/HTIOP/AMI/server.cpp:
        * orbsvcs/tests/HTIOP/AMI/simple_client.cpp:

          Removed unnessesary CORBA environment arguments from